# python-code-style

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  WHY.md  main.py  pyproject.toml
.github/workflows/: README.md  ci.yml
src/: example.py
src/models/: __init__.py  robot.py  task.py
src/scheduler/: __init__.py  robot_scheduler.py
src/services/: __init__.py  task_service.py
src/utils/: __init__.py  location_utils.py  status_monitor.py  validators.py
tests/: conftest.py
tests/test_models/: test_robot.py  test_task.py
tests/test_scheduler/: test_robot_scheduler.py
tests/test_services/: test_task_service.py
tests/test_utils/: test_location_utils.py  test_status_monitor.py  test_validators.py
